<resources>
    <string name="app_name">HuxEast</string>
    <string name="menu_register">注册</string>

    <string name="home_home">首页</string>
    <string name="home_find">发现</string>
    <string name="home_health">健康</string>
    <string name="home_user">我的</string>
    <string name="health_manager">健康管理</string>
    <string name="home_item_interrogation">健康询问</string>
    <string name="home_item_visit">在线出诊</string>
    <string name="home_item_pharmacy">便利药房</string>
    <string name="home_item_hospital">附近医院</string>
    <string name="user_no_login">未登录</string>
    <string name="no_login_info">您还未登录,点击去登陆</string>
    <string name="title_login">登录</string>
    <string name="hint_login_account">手机号码/用户名</string>
    <string name="login_account">用&#160;\&#160;户&#160;\&#160;名</string>
    <string name="login_password">登录密码</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="agreement_user"><u>《用户协议》</u></string>
    <string name="agreement_app"><u>《乐生活隐私政策》</u></string>
    <string name="and">和</string>
    <string name="consent_agreement">我已查看并同意乐生活的</string>
    <string name="enter_login">确定登录</string>
    <string name="please_input_account">请输入用户名</string>
    <string name="please_input_loginpsd">请输入正确的登录密码</string>
    <string name="title_inquiry">健康咨询</string>
    <string name="select_image">选择病情图片</string>
    <string name="illness_image">病情图片</string>
    <string name="hint_illnessinfo">请简要描述您的病情信息,便于医生更好的了解和诊断</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="illness_sex">您的性别</string>
    <string name="illness_start_time">起病时间</string>
    <string name="select_illness_startime">请选择起病时间</string>
    <string name="hint_illness_title">请简要描述病情信息</string>
    <string name="illness_havegenecinfo">是否有遗传史</string>
    <string name="hint_illness_genceinfo">遗传史说明</string>
    <string name="illness_centigrade">当前体温</string>
    <string name="hint_illness_centigrade">请输入当前体温</string>
</resources>