<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="loginac"
            type="com.good.job.models.account.view.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBg">

        <com.god.uikit.widget.TitleLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appTitleHeight"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorMainTheme"
            app:titleText="@string/title_login"
            app:menuType="menu_text"
            app:menuTextColor="@color/colorWhite"
            app:menuText="@string/menu_register"/>


        <com.god.uikit.widget.InputLayout
            android:id="@+id/account_layout"
            android:layout_width="0dp"
            style="@style/InputHaveLineTheme"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintText="@string/hint_login_account"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            app:itemText="@string/login_account"/>

        <com.god.uikit.widget.InputLayout
            android:id="@+id/password_layout"
            style="@style/InputHaveLineTheme"
            android:layout_width="0dp"
            app:inputType="password"
            app:layout_constraintTop_toBottomOf="@id/account_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            app:itemText="@string/login_password"
            app:hintText="@string/hint_login_password"/>


        <Button
            android:id="@+id/btn_submit"
            style="@style/SubmitButtonTheme"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:layout_constraintStart_toStartOf="@id/password_layout"
            app:layout_constraintEnd_toEndOf="@id/password_layout"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/enter_login"
            android:onClick="@{loginac.login}"/>


        <LinearLayout
            android:id="@+id/loginelse_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/agreement_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingLeft="@dimen/dp_40"
            android:paddingRight="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_10">


            <ImageView
                android:layout_width="@dimen/loginElseImageSize"
                android:layout_height="@dimen/loginElseImageSize"
                android:layout_weight="1"
                android:src="@drawable/icon_logo_weibo"/>


            <ImageView
                android:layout_width="@dimen/loginElseImageSize"
                android:layout_height="@dimen/loginElseImageSize"
                android:layout_weight="1"
                android:src="@drawable/icon_logo_wechat"/>


            <ImageView
                android:layout_width="@dimen/loginElseImageSize"
                android:layout_height="@dimen/loginElseImageSize"
                android:layout_weight="1"
                android:src="@drawable/icon_logo_qq"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/agreement_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dp_10">

            <ImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:src="@drawable/icon_hoke_no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextTheme"
                android:textSize="@dimen/sp_10"
                android:text="@string/consent_agreement"
                android:layout_marginLeft="@dimen/dp_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextTheme"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/colorMainTheme"
                android:text="@string/agreement_user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextTheme"
                android:textSize="@dimen/sp_10"
                android:text="@string/and"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextTheme"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/colorMainTheme"
                android:text="@string/agreement_app"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
